# AgilePlus

./: .commitlintrc.json  .commitlintrc.yml  .editorconfig  .gitignore  .pre-commit-config.yaml  .trufflehog.yml  ADR.md  AGENTS.md  ARCHITECTURE.md  CARGO-WORKSPACE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CNAME  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile.rust  FUNCTIONAL_REQUIREMENTS.md  GOVERNANCE.md  Justfile  LICENSE-APACHE  PHASE3_EXECUTION_READINESS_REPORT.md  PLAN.md  PRD.md  README.md  SECURITY.md  SPEC.md  Taskfile.yml  WORKLOG_VERIFICATION_2026_06_12.md  _typos.toml  ci_workflow_audit.md  cliff.toml  clippy.toml  codecov.yml  deny.toml  deny_triage.md  docker-compose.plane.yml  docker-compose.yml  evidence_ledger.jsonl  (+59 more)
crates/agileplus-api/: Cargo.toml  README.md
crates/agileplus-api/src/: api_key.rs  error.rs  lib.rs  main.rs  openapi.rs  responses.rs  router.rs  state.rs
crates/agileplus-api/src/middleware/: auth.rs  mod.rs  token_verifier.rs
crates/agileplus-api/src/routes/: audit.rs  backlog.rs  cycle.rs  events.rs  features.rs  governance.rs  import.rs  mod.rs  module.rs  stream.rs  work_packages.rs
crates/agileplus-api/tests/: api_integration.rs
crates/agileplus-api/tests/api_integration/: core_routes.rs
crates/agileplus-application/: Cargo.toml  README.md
crates/agileplus-application/src/: error.rs  events.rs  lib.rs
crates/agileplus-application/src/dto/: mod.rs
crates/agileplus-application/src/use_cases/: advance_feature.rs  create_epic.rs  create_feature.rs  create_story.rs  mod.rs  persist_synced_stories.rs  transition_story.rs  triage.rs
crates/agileplus-artifacts/: Cargo.toml
crates/agileplus-artifacts/src/: lib.rs  store.rs
crates/agileplus-cache/: Cargo.toml  README.md
crates/agileplus-cache/src/: config.rs  projection.rs  store.rs
crates/agileplus-cache/tests/: integration_tests.rs
crates/agileplus-cli/: Cargo.toml  README.md
crates/agileplus-cli/src/: context.rs  lib.rs  main.rs  runtime.rs  sync_cmd.rs
crates/agileplus-cli/src/commands/: branch.rs  cycle.rs  dag.rs  dashboard.rs  gate_add.rs  gate_run.rs  import_dagctl.rs  intent.rs  list.rs  list_epics.rs  list_projects.rs  list_stories.rs  list_tests.rs  mod.rs  module.rs  plan.rs  queue.rs  review_loop.rs  run_record.rs  scope.rs  scope_status.rs  seed_requirements.rs  sidecar_status.rs  specify.rs  trace.rs  triage.rs  validate.rs  version.rs  worklog.rs
crates/agileplus-cli/tests/: cli_smoke.rs  triage_port_adapter.rs
crates/agileplus-config/: Cargo.toml  README.md
crates/agileplus-config/src/: lib.rs
crates/agileplus-contract-tests/: Cargo.toml
crates/agileplus-convoy/: Cargo.toml
crates/agileplus-convoy/src/: bead.rs  coordinator.rs  lib.rs  store.rs
crates/agileplus-convoy/tests/: integration_test.rs
crates/agileplus-domain/: Cargo.toml  README.md
crates/agileplus-domain/src/: builder.rs  config.rs  credentials.rs  domain.rs  error.rs  intent_graph.rs  lib.rs  ports.rs
crates/agileplus-domain/src/credentials/: file.rs  keychain.rs  store.rs
crates/agileplus-domain/src/domain/: audit.rs  backlog.rs  cycle.rs  epic.rs  event.rs  feature.rs  metric.rs  (+10 more)
crates/agileplus-events/: Cargo.toml  README.md
crates/agileplus-events/src/: domain_event.rs  lib.rs  query.rs  store.rs
crates/agileplus-factory/: Cargo.toml
crates/agileplus-factory/src/: config.rs  lib.rs  pr.rs  queue.rs  trail.rs  worker.rs
crates/agileplus-fixtures/: Cargo.toml  README.md
crates/agileplus-fixtures/src/: builders.rs  lib.rs  payloads.rs  test_fixtures.rs
crates/agileplus-git/: Cargo.toml  README.md
crates/agileplus-git/src/: claim_bound.rs  coordinator.rs  events.rs  guard.rs  lib.rs  materialize.rs  observer.rs  snapshot.rs  topology.rs
crates/agileplus-github/: Cargo.toml  README.md
crates/agileplus-github/src/: client.rs  lib.rs  map.rs  sync.rs
crates/agileplus-governance/: Cargo.toml  README.md
crates/agileplus-governance/src/: audit.rs  channel.rs  client.rs  config.rs  error.rs  lib.rs  main.rs  policy.rs  rate_limiter.rs  types.rs
crates/agileplus-governance/tests/: qa_gates_integration.rs
crates/agileplus-graph/: Cargo.toml
crates/agileplus-graph/src/: graph_store.rs  lib.rs  rel_type_ext.rs  store.rs  types.rs
crates/agileplus-grpc/: Cargo.toml  README.md  build.rs
crates/agileplus-grpc/src/: conversions.rs  lib.rs  proxy.rs  streaming.rs  work_items.rs
crates/agileplus-grpc/tests/: grpc_integration.rs  pact_schema.rs
crates/agileplus-hook/: Cargo.toml
crates/agileplus-hook/src/: dispatch.rs  lib.rs  registry.rs
crates/agileplus-hook/tests/: integration_test.rs
crates/agileplus-import/: Cargo.toml  README.md
crates/agileplus-import/src/: lib.rs  manifest.rs  report.rs
crates/agileplus-integration-tests/: Cargo.toml
crates/agileplus-integration-tests/tests/: feature_lifecycle.rs  modules_and_cycles.rs  service_control.rs  service_failure.rs  sync_conflict.rs
crates/agileplus-mcp-intent/: Cargo.toml  README.md  ontology.json
crates/agileplus-mcp-intent/src/: converter.rs  http.rs  lib.rs  main.rs  mcp.rs  storage.rs  types.rs  validator.rs
crates/agileplus-nats/: Cargo.toml  README.md
crates/agileplus-nats/src/: config.rs  lib.rs  nats_adapter.rs
crates/agileplus-p2p/: Cargo.toml  README.md
crates/agileplus-p2p/src/: device.rs  discovery.rs  export.rs  import.rs  lib.rs  replication.rs  vector_clock.rs
crates/agileplus-pipeline/: Cargo.toml
crates/agileplus-pipeline/src/: dot_export.rs  dot_parser.rs  executor.rs  lib.rs  resource.rs
crates/agileplus-plane/: Cargo.toml  README.md
crates/agileplus-plane/src/: client.rs  inbound.rs  lib.rs  outbound.rs  plane_sync.rs  runtime.rs  state_mapper.rs  sync.rs  sync_queue.rs  webhook.rs
dispatch-mcp/: .gitignore  CLAUDE.md  README.md  pyproject.toml
dispatch-mcp/.github/workflows/: ci.yml
dispatch-mcp/src/dispatch_mcp/: server.py
dispatch-mcp/tests/: test_server.py
fuzz/: Cargo.toml
fuzz/fuzz_targets/: feature_deserialize.rs
rust/: Cargo.toml  deny.toml
xtask-anti-patterns/: Cargo.toml  README.md
xtask-anti-patterns/src/: main.rs
(+858 files in other folders)
