# =============================================================================
# AgilePlus — Rust Workspace
# =============================================================================
#
# 21-crate Cargo workspace powering the AgilePlus platform: a Rust+TypeScript
# product & engineering management system with an Axum HTTP/gRPC backend, a
# SQLite-backed local store, an Electrobun desktop app, and a React/TS
# dashboard.
#
# Crate layout (each crate has its own README and CHANGELOG):
#
#   Domain & Application core (pure-Rust, no I/O):
#     - agileplus-domain         Domain types, aggregates, invariants
#     - agileplus-application    Use cases / services orchestrating domain
#     - agileplus-config         Typed config loading & validation
#     - agileplus-events         Domain event taxonomy & envelope
#     - agileplus-proto          Generated prost/tonic protobuf bindings
#     - agileplus-fixtures       Test data builders (dev-dep)
#
#   Infrastructure adapters (I/O-bound):
#     - agileplus-sqlite         SQLite repository implementation
#     - agileplus-cache          In-memory + SQLite cache layer
#     - agileplus-git            gix-based Git adapter
#     - agileplus-nats           Async-nats pub/sub adapter
#     - agileplus-telemetry      OpenTelemetry + tracing init
#     - agileplus-import         Bulk import from GitHub / Plane
#
#   Interfaces (transport / surface):
#     - agileplus-api            Axum HTTP server + REST endpoints
#     - agileplus-grpc           Tonic gRPC server
#     - agileplus-dashboard      React/TS web dashboard + health server
#     - agileplus-github         GitHub webhook + sync adapter
#     - agileplus-plane          Plane.so adapter
#     - agileplus-p2p            libp2p / p2p sync transport
#     - agileplus-triage         Triage queue / classifier
#
#   Operations & DX:
#     - agileplus-cli            Top-level binary `agileplus` (clap subcmds)
#     - xtask-anti-patterns      Build-time linter catching cargo anti-patterns
#
# Build & verify:
#   cargo build --workspace --all-targets      # compile everything
#   cargo test  --workspace                    # 646 tests
#   cargo clippy --workspace --all-targets -- -D warnings
#   cargo run -p xtask-anti-patterns           # workspace linter
#
# See SPEC.md, FUNCTIONAL_REQUIREMENTS.md, AGENTS.md, and CONTRIBUTING.md
# for design rationale and contributor workflow.
# =============================================================================

[workspace]
resolver = "3"
members = [
    "crates/agileplus-config",
    "crates/agileplus-cache",
    "crates/agileplus-governance",
    "crates/agileplus-application",
    "crates/agileplus-dashboard",
    "crates/agileplus-domain",
    "crates/agileplus-events",
    "crates/agileplus-fixtures",
    "crates/agileplus-git",
    "crates/agileplus-sqlite",
    "crates/agileplus-cli",
    "crates/agileplus-api",
    "crates/agileplus-grpc",
    "crates/agileplus-github",
    "crates/agileplus-plane",
    "crates/agileplus-nats",
    "crates/agileplus-p2p",
    "crates/agileplus-telemetry",
    "crates/agileplus-triage",
    "crates/agileplus-trace-validator",
    "crates/agileplus-import",
    "crates/agileplus-proto",
    "crates/agileplus-subcmds",
    "crates/pheno-ssot-template",
    "xtask-anti-patterns",
]
exclude = ["AgilePlus/rust", "rust", "crates/phenotype-config"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.88"

[package]
name = "agileplus"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
axum.workspace = true
chrono.workspace = true

[dev-dependencies]
axum-test = "20.1.0"
chrono.workspace = true
cucumber = "0.23"
sha2.workspace = true

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.39", features = ["full"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
serde_yaml = "0.9"
url = "2"
dirs = "5"
tempfile = "3"
axum = { version = "0.8", features = ["json", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
tonic = { version = "0.13", features = ["transport", "prost"] }
tonic-build = "0.13"
prost = "0.13"
prost-build = "0.13"
gix = "0.83.0"
# OpenTelemetry - matching versions for compatibility
opentelemetry = { version = "0.27", features = ["metrics"] }
opentelemetry_sdk = { version = "0.27", features = ["metrics", "trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic", "gzip-tonic", "http-proto", "reqwest-client"] }
# OpenTelemetry tracing bridge — uncomment when ready to use
tracing-opentelemetry = "0.27"
utoipa = "4"
uuid = { version = "1", features = ["v4", "serde"] }
async-nats = "0.47"
paste = "1"
phenotype-error-core = { path = "../phenoShared/crates/phenotype-error-core" }
phenotype-logging = { path = "../phenoShared/crates/phenotype-logging" }
agileplus-config = { path = "crates/agileplus-config" }
agileplus-proto = { path = "crates/agileplus-proto" }
agileplus-telemetry = { path = "crates/agileplus-telemetry" }
tokio-stream = { version = "0.1", features = ["net", "sync"] }
