[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dispatch-mcp"
version = "0.1.0"
description = "MCP service for tier-based dispatch delegation"
requires-python = ">=3.13"
license = {text = "Apache-2.0"}
authors = [
  {name = "Phenotype Inc."},
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "fastmcp>=3.2.0,<4.0.0",
  "httpx>=0.27.0,<0.29.0",
]

[project.optional-dependencies]
dev = [
  "pytest-cov>=4.0,<5.0",
]

[project.scripts]
dispatch-mcp = "dispatch_mcp.server:main"

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = [".venv/", "build/", "dist/", "__pycache__/", "*.egg-info/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
branch = true
source = ["src/dispatch_mcp"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
