[package]
name = "agileplus-proto"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Generated gRPC stubs for AgilePlus"

[dependencies]
prost = "0.13"
tonic = { version = "0.13", features = ["transport", "prost"] }

[package.metadata.cargo-machete]
ignored = ["prost"]

[build-dependencies]
tonic-build = "0.13"
