[package]
name = "agileplus-proto"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Generated gRPC stubs for AgilePlus"
repository = "https://github.com/KooshaPari/AgilePlus"
documentation = "https://docs.rs/agileplus-proto"
keywords = ["phenotype", "agileplus"]
categories = ["development-tools"]
authors = ["kooshapari"]

[dependencies]
prost = "0.13"
tonic = { version = "0.13", features = ["transport", "prost"] }

[package.metadata.cargo-machete]
ignored = ["prost"]

[build-dependencies]
tonic-build = "0.13"
