[package]
name = "xtask-anti-patterns"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false
license = "MIT OR Apache-2.0"
repository = "https://github.com/KooshaPari/AgilePlus"
authors = ["kooshapari"]
description = "xtask anti patterns — Phenotype infrastructure crate (AgilePlus)"
documentation = "https://docs.rs/xtask-anti-patterns"
keywords = ["phenotype", "agileplus"]
categories = ["development-tools"]

[[bin]]
name = "xtask-anti-patterns"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
