[package]
name = "agileplus-application"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Application / use-case layer (hexagonal — no framework deps)"

[dependencies]
agileplus-domain = { path = "../agileplus-domain" }
agileplus-triage = { path = "../agileplus-triage" }
agileplus-graph = { path = "../agileplus-graph" }
anyhow = "1.0"
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
phenotype-error-core.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
