[package]
name = "agileplus-artifacts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"
repository = "https://github.com/KooshaPari/AgilePlus"
description = "agileplus artifacts — Phenotype infrastructure crate (AgilePlus)"
documentation = "https://docs.rs/agileplus-artifacts"
keywords = ["phenotype", "agileplus"]
categories = ["development-tools"]
authors = ["kooshapari"]

[dependencies]
async-trait = { workspace = true }
bytes = "1"
chrono = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
