[package]
name = "agileplus-cache"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"
repository = "https://github.com/KooshaPari/AgilePlus"
description = "agileplus cache — Phenotype infrastructure crate (AgilePlus)"
documentation = "https://docs.rs/agileplus-cache"
keywords = ["phenotype", "agileplus", "cache"]
categories = ["caching"]
authors = ["kooshapari"]

[dependencies]
agileplus-config = { workspace = true }
agileplus-domain = { path = "../agileplus-domain" }
redis = { version = "0.27", features = ["aio", "tokio-comp"] }
bb8 = "0.9"
bb8-redis = "0.18"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
tokio = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
