[package]
name = "agileplus-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "agileplus-cli"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4", features = ["derive", "env"] }
chrono.workspace = true
agileplus-domain = { path = "../agileplus-domain" }
agileplus-github = { path = "../agileplus-github" }
agileplus-sqlite = { path = "../agileplus-sqlite" }
rusqlite = { version = "0.32", features = ["bundled"] }
async-trait.workspace = true

[dev-dependencies]
tokio-test = "0.4"
