[package]
name = "agileplus-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"
repository = "https://github.com/KooshaPari/AgilePlus"
description = "agileplus cli — Phenotype infrastructure crate (AgilePlus)"
documentation = "https://docs.rs/agileplus-cli"
keywords = ["phenotype", "agileplus", "cli"]
categories = ["command-line-utilities"]
authors = ["kooshapari"]

[[bin]]
name = "agileplus-cli"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4", features = ["derive", "env"] }
chrono.workspace = true
agileplus-application = { path = "../agileplus-application" }
agileplus-domain = { path = "../agileplus-domain" }
agileplus-github = { path = "../agileplus-github" }
agileplus-sqlite = { path = "../agileplus-sqlite" }
agileplus-triage = { path = "../agileplus-triage" }
agileplus-telemetry.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
agileplus-trace-validator = { path = "../agileplus-trace-validator" }
comfy-table = "7"

[dev-dependencies]
proptest = "1"
tokio-test = "0.4"
tempfile = "3"
