[package]
name = "agileplus-contract-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"
repository = "https://github.com/KooshaPari/AgilePlus"
authors = ["kooshapari"]
description = "agileplus contract tests — Phenotype infrastructure crate (AgilePlus)"
documentation = "https://docs.rs/agileplus-contract-tests"
keywords = ["phenotype", "agileplus", "test"]
categories = ["development-tools::testing", "development-tools"]

# This crate has no library; it only exists as an integration test crate.
[lib]
name = "agileplus_contract_tests"
path = "src/lib.rs"

[dependencies]
agileplus-domain = { path = "../agileplus-domain" }
agileplus-events = { path = "../agileplus-events" }
agileplus-sqlite = { path = "../agileplus-sqlite" }
agileplus-plane = { path = "../agileplus-plane" }
agileplus-api = { path = "../agileplus-api" }
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true

[[test]]
name = "events_sqlite_contract"
path = "../../tests/contracts/events_sqlite_contract.rs"

[[test]]
name = "sync_plane_contract"
path = "../../tests/contracts/sync_plane_contract.rs"

[[test]]
name = "dashboard_api_contract"
path = "../../tests/contracts/dashboard_api_contract.rs"

[[test]]
name = "api_events_contract"
path = "../../tests/contracts/api_events_contract.rs"
