[package]
name = "agileplus-convoy"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Convoy primitive: two-phase commit bead coordination for MEOW"

[dependencies]
agileplus-triage = { path = "../agileplus-triage" }
agileplus-graph = { path = "../agileplus-graph" }
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "macros"] }
