[package]
name = "agileplus-domain"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
phenotype-error-core = { path = "../../../phenoShared/crates/phenotype-error-core" }
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
sha2.workspace = true
