[package]
name = "agileplus-domain"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
phenotype-error-core.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
sha2.workspace = true
agileplus-validate.workspace = true
regex = "1"
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
