[package]
name = "agileplus-domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"
repository = "https://github.com/KooshaPari/AgilePlus"
authors = ["kooshapari"]
description = "agileplus domain — Phenotype infrastructure crate (AgilePlus)"
documentation = "https://docs.rs/agileplus-domain"
keywords = ["phenotype", "agileplus", "domain"]
categories = ["data-structures"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
phenotype-error-core.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
sha2.workspace = true
agileplus-validate.workspace = true
regex = "1"
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
