[package]
name = "agileplus-events"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"
repository = "https://github.com/KooshaPari/AgilePlus"
authors = ["kooshapari"]
description = "agileplus events — Phenotype infrastructure crate (AgilePlus)"
documentation = "https://docs.rs/agileplus-events"
keywords = ["phenotype", "agileplus"]
categories = ["development-tools"]

[dependencies]
agileplus-domain = { path = "../agileplus-domain" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
