[package]
name = "agileplus-git"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
agileplus-domain = { path = "../agileplus-domain" }
anyhow.workspace = true
async-trait = "0.1"
git2 = { version = "0.20", features = ["vendored-libgit2"] }
gix = { version = "0.83.0", default-features = false, features = ["worktree-stream", "revision", "sha1"] }
notify = "8"
async-nats = "0.47"
tokio = { version = "1", features = ["sync", "time", "macros"] }
tracing = "0.1"
toml = "0.8"
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
