[package]
name = "agileplus-github"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"
repository = "https://github.com/KooshaPari/AgilePlus"
authors = ["kooshapari"]
description = "agileplus github — Phenotype infrastructure crate (AgilePlus)"
documentation = "https://docs.rs/agileplus-github"
keywords = ["phenotype", "agileplus", "git"]
categories = ["development-tools::version-control"]

[dependencies]
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
async-trait.workspace = true
chrono.workspace = true
reqwest = { version = "0.12", features = ["json"] }
agileplus-domain = { path = "../agileplus-domain" }
