[package]
name = "agileplus-governance"
version = "0.1.0"
edition = "2021"
description = "AgilePlus governance system for release channels, audit logging, and policy enforcement"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KooshaPari/AgilePlus"
keywords = ["governance", "release", "policy", "audit"]
categories = ["development-tools", "governance"]
documentation = "https://docs.rs/agileplus-governance"
authors = ["kooshapari"]

[[bin]]
name = "agileplus-governance"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
# Config builder macro
agileplus-config = { path = "../agileplus-config" }
agileplus-telemetry.workspace = true

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Database (SQLite for local governance)
rusqlite = { version = "0.32", features = ["bundled"] }

# Configuration
config = "0.14"

# Error handling
thiserror = "1"
anyhow = "1"

# Async traits
async-trait = "0.1"

# Regex for pattern matching
regex = "1"

# Environment variables
envsubst = "0.2"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"

[features]
default = []
cli = ["clap", "whoami"]

[dependencies.whoami]
optional = true
version = "1"

[dependencies.clap]
optional = true
version = "4"
features = ["derive"]
