[package]
name = "agileplus-graph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"
repository = "https://github.com/KooshaPari/AgilePlus"
authors = ["kooshapari"]
description = "agileplus graph — Phenotype infrastructure crate (AgilePlus)"
documentation = "https://docs.rs/agileplus-graph"
keywords = ["phenotype", "agileplus", "graph"]
categories = ["data-structures"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "macros"] }
