[package]
name = "agileplus-grpc"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[build-dependencies]
tonic-build.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
tracing.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
agileplus-domain = { path = "../agileplus-domain" }
agileplus-github = { path = "../agileplus-github" }
agileplus-proto = { path = "../agileplus-proto" }
tokio-stream.workspace = true
