[package]
name = "agileplus-hook"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Hook primitive: claim-event trigger/dispatch for MEOW"

[dependencies]
agileplus-triage = { path = "../agileplus-triage" }
agileplus-events = { path = "../agileplus-events" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
regex = "1"
thiserror.workspace = true
tokio.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "macros"] }
tempfile.workspace = true
