[package]
name = "agileplus-import"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"
repository = "https://github.com/KooshaPari/AgilePlus"
authors = ["kooshapari"]
description = "agileplus import — Phenotype infrastructure crate (AgilePlus)"
documentation = "https://docs.rs/agileplus-import"
keywords = ["phenotype", "agileplus", "port"]
categories = ["development-tools", "data-structures"]

[dependencies]
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
