[package]
name = "agileplus-integration-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
license = "MIT OR Apache-2.0"
repository = "https://github.com/KooshaPari/AgilePlus"
authors = ["kooshapari"]
description = "agileplus integration tests — Phenotype infrastructure crate (AgilePlus)"
documentation = "https://docs.rs/agileplus-integration-tests"
keywords = ["phenotype", "agileplus", "test"]
categories = ["development-tools::testing"]

[features]
# Enable full integration tests requiring process-compose + external services
integration = []

[dependencies]
agileplus-domain = { path = "../agileplus-domain" }
agileplus-fixtures = { path = "../agileplus-fixtures" }
agileplus-sqlite = { path = "../agileplus-sqlite" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
