[package]
name = "agileplus-mcp-intent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "MCP tool + HTTP service for converting user prompts into AgilePlus intent graphs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KooshaPari/AgilePlus"
authors = ["kooshapari"]
documentation = "https://docs.rs/agileplus-mcp-intent"
keywords = ["phenotype", "agileplus", "mcp"]
categories = ["api-bindings"]

[[bin]]
name = "agileplus-mcp-intent"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
# Non-workspace
jsonschema = "0.28"
regex = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
clap = { version = "4", features = ["derive"] }
tracing-subscriber.workspace = true
agileplus-sqlite = { path = "../agileplus-sqlite" }
agileplus-domain = { path = "../agileplus-domain" }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
